2022-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/grodvi/dvi.cpp (usage):
	* src/devices/grolbp/lbp.cpp (usage):
	* src/devices/grolj4/lj4.cpp (usage):
	* src/devices/grops/ps.cpp (usage):
	* src/devices/grotty/tty.cpp (usage):
	* src/devices/xditview/xditview.cpp (usage):
	* src/preproc/eqn/main.cpp (usage):
	* src/preproc/grn/main.cpp (usage):
	* src/preproc/pic/main.cpp (usage):
	* src/preproc/preconv/preconv.cpp (usage):
	* src/preproc/refer/refer.cpp (usage):
	* src/preproc/soelim/soelim.cpp (usage):
	* src/roff/groff/groff.cpp (synopsis, help):
	* src/utils/addftinfo/addftinfo.cpp (usage):
	* src/utils/hpftodit/hpftodit.cpp (usage):
	* src/utils/indxbib/indxbib.cpp (usage):
	* src/utils/lkbib/lkbib.cpp (usage):
	* src/utils/lookbib/lookbib.cpp (usage):
	* src/utils/pfbtops/pfbtops.c (usage):
	* src/utils/tfmtodit/tfmtodit.cpp (usage):
	* src/utils/xtotroff/xtotroff.c (usage): Update usage message.
	Present different modes of operation on separate output lines.
	Sort options in English lexicographic order.  Document help
	option(s) as last mode of operation.

2022-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Revise handling of argument 0.
	Rename scalar `progname` to `prog` for brevity (and preparation
	for writing a usage message).  Also stop stripping off directory
	name components from it.  No other groff program does this, and
	it might save users some confusion if they're working with
	multiple copies of gropdf.

2022-10-21  G. Branden Robinson <g.branden.robinson@gmail.com>

	Migrate terminology from "paper size" to "paper format" or
	"paper dimensions" as appropriate in documentation and
	diagnostic messages.  "Format" implies an orientation (which can
	be overridden in many cases) whereas size does not.  When only
	the magnitudes of measurements are at issue (mainly for internal
	purposes), use the term "dimensions".

	* NEWS:
	* PROBLEMS:
	* doc/groff.texi: