@@ -8,6 +8,7 @@
 	* src/devices/xditview/xditview.cpp (usage):
 	* src/preproc/eqn/main.cpp (usage):
 	* src/preproc/grn/main.cpp (usage):
+	* src/preproc/html/pre-html.cpp (usage):
 	* src/preproc/pic/main.cpp (usage):
 	* src/preproc/preconv/preconv.cpp (usage):
 	* src/preproc/refer/refer.cpp (usage):
